src/components/shared/scss/_layout.scss
.layout {
  display: flex;
  flex-direction: row;
  min-height: 80%;
  margin: 0 auto;
  max-width: 1024px;

  @include bp(medium) {
    flex-direction: column;
  }
}

.layout__side {
  flex: 1;
  border-top: 2px solid $red;
  margin: 30px;
  min-width: 300px;

  @include bp(medium) {
    margin: 0;
  }
}

.layout__main {
  flex: 2;
  margin: 16px 24px 24px 6px;

  @include bp(medium) {
    margin: 0 24px 24px;
  }
}

.logo__header {
  background-color: $red;
  min-height: 12px;

  &__inner {
    padding: 10px 30px 5px 30px;

    @include bp(medium) {
      padding: 10px 15px;
    }
  }

  &__donatebar {
    position: relative;
    width: 100%;
    height: 30px;
    margin-right: 20px;
    background-color: white;
    border-radius: 15px;

    &__total {
      display: inline-block;
      min-width: 5%;
      height: 30px;
      background-color: $blue;
      border-bottom-left-radius: 15px;
      border-top-left-radius: 15px;

      color: white;
      text-align: right;
      padding-right: 5px;
      line-height: 30px;
    }

    &__goal {
      position: absolute;
      right: 5px;
      display: inline-block;
      line-height: 30px;
    }
  }

  &__donatetext {
    line-height: inherit;
    margin: -5px 0 0 0;

    @include bp(medium) {
      margin: 0;
    }

    a {
      color: white;
      font-size: $font-small;
      text-decoration: underline;
    }
  }
}

.callcount {
  clear: both;
  font-size: $font-xlarge;
  font-weight: bold;
  text-transform: uppercase;
  @include bp(small) {
    font-size: $font-large;
  }
}

.promote {
  p {
    font-size: $font-large;
    text-align: center;
  }
  a {
    cursor: pointer;
    display: inline-block;
    margin: 12px 12px 20px;
  }
}

.town-hall{
  h4 {
    margin: 5px 0;
    text-align: center;
    font-size: $font-large;
  }
  p {
    font-size: $font-normal;
  }
  .list-group{
    .list-group-item {
      position: relative;
      display: block;
      padding: 10px 15px;
      margin-bottom: -1px;
      background-color: #fff;
      border: 1px solid #ddd;
      .badge {
        line-height: 1;
        white-space: nowrap;
        font-weight: 700;
        font-size: 12px;
        text-align: center;
        display: inline-block;
        min-width: 10px;
        padding: 3px 7px;
        color: #fff;
        vertical-align: middle;
        background-color: #777;
        border-radius: 10px;
        position: absolute;
        right: 10px;
        top: 22px;
      }
      .list-inline{
        padding-left: 0;
        list-style: none;
        margin-left: -5px;
        margin-bottom: 0;
        margin-top: 0;
        li {
          display: block;
          padding-left: 5px;
          padding-right: 5px;
        }
      }
      .list-inline-separated{
        li{
          margin-left: 10px;
        }
      }
    }
  }
}
footer {
  background-color: $blue;
  text-align: center;
  font-size: $font-small;
  color: #fff;
  padding-top: 12px;

  .colophon {
    padding: 12px 0 48px 0;
    line-height: 2em;
    a {
      padding: 0 12px;
      white-space: nowrap;
      span {
        margin-left: 5px;
      }
    }
    p {
      a {
        padding: 0;
        text-decoration: underline;
      }
    }
  }
  a {
    color: #fff;
  }
  .emailform {
    display: inline-block;
    white-space: nowrap;
  }
  input[type=text] {
    width: 120px;
  }
}

